# openai-api.cpp

./: .gitignore  API_EXPORT.md  CLUSTER_MODE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: openai_apiConfig.cmake.in
examples/: CMakeLists.txt
examples/cluster/: CMakeLists.txt  master.cpp  worker.cpp
examples/qwen_server/: CMakeLists.txt  main.cpp
examples/whisper_sensevoice/: CMakeLists.txt  main.cpp
include/openai_api/: cluster_server.hpp  router.hpp  server.hpp  types.hpp
include/openai_api/cluster/: internal_protocol.hpp  remote_worker_provider.hpp  worker_client.hpp  worker_manager.hpp
include/openai_api/core/: api_export.hpp  data_provider.hpp  output_chunk.hpp
include/openai_api/encoder/: encoder.hpp
scripts/: ci_test.sh
src/: cluster_server.cpp  main.cpp  router.cpp  server.cpp
src/cluster/: remote_worker_provider.cpp  worker_client.cpp  worker_manager.cpp
tests/: test_cluster.cpp  test_cluster_full.cpp  test_encoder.cpp  test_integration.cpp  test_provider.cpp  test_with_openai_sdk.py
